# Computer-Ecosystem

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
assembler/: README.md
assembler/V1/: README.md  pyproject.toml  requirements.txt
assembler/V1/examples/v1/: demo.asm  test.asm
assembler/V1/src/: __init__.py
assembler/V1/src/asm/: __init__.py  assembler.py  ast.py  cli.py  diagnostics.py  encoding.py  isa.py  lexer.py  parser.py  pass1_symbols.py  pass2_emit.py
assembler/V1/src/common/: print_bytes.py  utils.py
assembler/V1/src/loadbin/: __init__.py  cli.py  loader.py
compiler/: README.md
docs/: README.md
docs/global/: architecture.md  decisions.md  roadmap.md
docs/global/Notes/: glossary.md  overview.md  references.md
docs/sections/assembler/: encoding.md  index.md  syntax.md  testing.md
docs/sections/compiler/: codegen.md  index.md  ir.md  language-spec.md
docs/sections/emulator/: index.md  internals.md  isa.md
docs/sections/os/: boot.md  index.md  kernel.md  memory-map.md  syscalls.md
emulator/: README.md
emulator/V1/tests/: test_demo_section_4.py  test_exec_v1.py  (+6 more)
emulator/V2/: README.md  pyproject.toml
emulator/V2/src/emu/: __init__.py  cli.py  cpu_state.py  execute_bin.py  executor_v2.py  faults.py  memory.py
emulator/V2/tests/: __init__.py  test_conftest.py  test_cpu_v2_only.py  test_demo_section_4.py  test_exec_v1.py  test_exec_v1_jumps.py  test_exec_v1_mem.py  test_faults_v1.py  test_halt_and_mov_ri.py  test_helpers.py  test_mov_rr.py  test_v2_two_calls_nested_stack_alignment_and_fp_prologue.py
os/: README.md
(+6 files in other folders)
